# CaRSC26_13524130_THT

./: .gitconfig  .gitignore  README.md
CaRSC26-_-THT-_-13524130./: README.md
CaRSC26-_-THT-_-13524130./docs/: jawaban-b.md
CaRSC26-_-THT-_-13524130./install/: setup.sh
CaRSC26-_-THT-_-13524130./log/: latest_build
CaRSC26-_-THT-_-13524130./src/soal-6-coconsept/: vidtest.cpp
docs/: jawaban-a.md  jawaban-b.md  progres.md
install/: local_setup.sh
install/yapping/share/yapping/: package.bash  package.zsh
lampiran/: vision_to_mavros.hpp
src/soal-1/: t  telemetry_processor.cpp
src/soal-2-and-3-ConCept/src/yapping/: CMakeLists.txt  package.xml
src/soal-2-and-3-ConCept/src/yapping/src/: duration.hpp  user.cpp  watch.cpp
src/soal-2-and-3-ConCept/src/yapping/srv/: Duration.srv
src/soal-2and3-coconsept/install/: local_setup.sh  setup.sh
src/soal-2and3-coconsept/log/: latest_build
src/soal-2and3-coconsept/src/yapping/src/: clock.cpp
src/soal-3/: m  multitread.cpp
src/soal-4/: pipeline_parser.hpp  vision_to_mavros.hpp
src/soal-4-GCS/: docker-compose.yml
src/soal-4-GCS/backend/: Dockerfile  requirements.txt
src/soal-4-GCS/backend/app/: main.py  models.py  routes.py
src/soal-4-GCS/frontend/: index.html  package.json  style.css  vite.config.js
src/soal-4-GCS/frontend/src/: App.jsx  index.jsx
src/soal-4-GCS/frontend/src/components/: EditModal.jsx  Form.jsx  Table.jsx
src/soal-4-GCS/frontend/src/utils/: api.js
src/soal-5-ConCept/: loadimg.cpp
src/soal-5-coconsept/: loadimg
src/soal-6-coconsept/: vidtest
(+74 files in other folders)
